# katvan

./: .flake8  .gitignore  CHANGELOG.md  README.md  culture.yaml  pyproject.toml  sonar-project.properties
.github/workflows/: docs-check.yml  publish.yml  reference-sync.yml  sonarcloud.yml  tests.yml
docs/: gsc-setup.md  skill-sources.md
katvan/: __init__.py  __main__.py  frontmatter.py  repos.py
katvan/cli/: __init__.py  _errors.py  _output.py
katvan/explain/: __init__.py  catalog.py
katvan/gsc/: __init__.py  _sitemap_fetch.py  client.py  doctor.py  inspect.py  sitemaps.py
scripts/: sync_agex_skills.py
site/: Gemfile  _config.base.yml  _config.culture.yml  index.md  robots.txt  sitemap-agentirc.html  sitemap-main.html  sitemap.html  wrangler.jsonc
site/_data/: agentculture_repos.yml  category_titles.yml  culture_subcommands.yml  landing.yml  sites.yml  style.yml
site/_includes/: analytics.html  head_custom.html  repo_table.html  subcommand_table.html
site/_layouts/: home.html
site/agex/: getting-started.md  index.md  skill-sources.md
site/docs/: README.md  attention.md  coverage-baseline.md  ecosystem.md  index.md  quickstart.md  why.md
tests/: conftest.py  test_cli.py
tests/cli/: test_doctor.py  test_gsc_doctor.py  test_gsc_inspect.py  test_gsc_sitemaps.py  test_overview.py  test_pull.py
tests/fixtures/: fake_afi_bin.py
tests/unit/: test_doctor.py  test_explain.py  test_frontmatter.py  test_gsc_client.py  test_gsc_doctor.py  test_gsc_inspect.py  test_gsc_scaffold.py  test_gsc_sitemap_fetch.py  test_gsc_sitemaps.py  test_learn.py  test_no_circular_imports.py  test_output.py  test_overview.py  test_pull.py  test_repos.py  (+1 more)
(+159 files in other folders)
